<resources>
    <string name="app_name">A1</string>
    <string name="header_name">Test Prime</string>
    <string name="static_is_prime">Is a prime number?</string>
    <string name="dummy_prime">Prime</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="next">Next</string>
    <string name="showhint">Show Hint</string>
    <string name="showcheat">Show Cheat</string>
    <string name="result_correct">Correct answer</string>
    <string name="result_incorrect">Incorrect answer</string>
    <string name="title_activity_hint">Get Hint for question</string>

    <string name="hint_text_noshown">Do you want hint?</string>
    <string name="cheat_text_noshown1">Do you want to cheat and know if</string>
    <string name="cheat_text_noshown2">is a Prime Number?</string>

    <string name="hint_text">A prime number (or a prime) is a natural number greater than 1 that has no positive divisors other than 1 and itself. A natural number greater than 1 that is not a prime number is called a composite number.</string>
    <string name="cheat_answer_is_prime"> is a Prime Number</string>
    <string name="cheat_answer_is_not_prime"> is not a Prime Number</string>

    <string name="hint_used_toast_message">You just used a hint</string>
    <string name="cheat_used_toast_message">You just cheated. Aho</string>

    <string name="title_activity_cheat">Cheat To Get Answer</string>
</resources>
