<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="in.ac.iiitd.madhur15030.assignment1.MainActivity"
    android:background="#67738d">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/nextButton"
        android:onClick="nextTapped"
        android:drawableRight="@drawable/next"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct"
            android:id="@+id/correctButton"
            android:onClick="isPrimeTapped"
            android:drawableLeft="@drawable/thumbsup"
            android:layout_marginBottom="105dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incorrect"
            android:id="@+id/incorrectButton"
            android:drawableLeft="@drawable/thumbsdown"
            android:onClick="isNotPrimeTapped"
            android:layout_alignEnd="@+id/cheatButton"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showhint"
            android:id="@+id/hintButton"
            android:drawableStart="@drawable/hint"
            android:onClick="showHintTapped"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/incorrectButton"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showcheat"
            android:layout_marginTop="10dp"
            android:id="@+id/cheatButton"
            android:drawableStart="@drawable/cheat"
            android:onClick="showCheatTapped"
            android:layout_below="@+id/incorrectButton"
            android:layout_toEndOf="@+id/hintButton" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/linearLayout"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_prime"
            android:textSize="22sp"
            android:id="@+id/prime_number"
            android:textColor="#FFFFFF"
            android:layout_alignTop="@+id/textView2"
            android:layout_toStartOf="@+id/textView2"
            android:layout_marginRight="5dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/static_is_prime"
            android:textSize="22dp"
            android:id="@+id/textView2"
            android:layout_above="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:textColor="#FFFFFF" />
    </LinearLayout>


</RelativeLayout>
